moved constants into main js file

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <p class="result-text" id="wildcard">Wildcard: </p>
     </div>
   </div>
-<script type="module" src="cuisineFusionWheel.js" charset="utf-8"></script>
-<script type="module" src="allCuisines.js" charset="utf-8"></script>
+<script src="cuisineFusionWheel.js" charset="utf-8"></script>
 </body>
 
 </html>
